syntax = "proto3";
package gaia.globalfee.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/cosmos/gaia/x/globalfee/types";

// GenesisState - initial state of module
message GenesisState {
  // Params of this module
  Params params = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "params,omitempty"
  ];
}

// Params defines the set of module parameters.
message Params {
  // minimum_gas_prices stores the minimum gas price(s) for all TX on the chain.
  // When multiple coins are defined then they are accepted alternatively.
  // The list must be sorted by denoms asc. No duplicate denoms or zero amount
  // values allowed. For more information see
  // https://docs.cosmos.network/main/modules/auth#concepts
  repeated cosmos.base.v1beta1.DecCoin minimum_gas_prices = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "minimum_gas_prices,omitempty",
    (gogoproto.moretags) = "yaml:\"minimum_gas_prices\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins"
  ];

  // bypass_min_fee_msg_types defines a list of message type urls
  // that are free of fee charge.
  repeated string bypass_min_fee_msg_types = 2 [
    (gogoproto.jsontag) = "bypass_min_fee_msg_types,omitempty",
    (gogoproto.moretags) = "yaml:\"bypass_min_fee_msg_types\""
  ];

  // max_total_bypass_min_fee_msg_gas_usage defines the total maximum gas usage
  // allowed for a transaction containing only messages of types in bypass_min_fee_msg_types
  // to bypass fee charge.
  uint64 max_total_bypass_min_fee_msg_gas_usage = 3;
}
